tests/NormalTests/paczka2/big_fuzzy/92945959.err
Error in line 7: txekvZJk S402 73,9
Error in line 3: SEHK4uS S402 67,9
Error in line 6: A667 A667 56,2
Error in line 21: 8CKQGf S125 99,3
Error in line 30: txekvZJk S125 76,6
Error in line 36: SEHK4uS S125 44,3
Error in line 41: 8CKQGf A667 7,1
Error in line 47: SEHK4uS A667 74,5
Error in line 50: shgiOwihgkp S125 1,6
Error in line 51: A667 A667 40,0
Error in line 52: shgiOwihgkp A667 15,6
Error in line 53: A667 S392 72,5
Error in line 61: SEHK4uS A667 94,0
Error in line 64: SEHK4uS S402 48,7
Error in line 60: xWkhzur8 S392 83,8
Error in line 68: shgiOwihgkp S125 385,2
Error in line 72: A667 S402 4,6
Error in line 76: A667 S392 53,8
Error in line 94: SEHK4uS S402 145,01
Error in line 95: 8CKQGf A667 5,6
Error in line 96: En1aFsnEx S392 47,9
Error in line 100: En1aFsnEx S402 81,3
Error in line 89: xWkhzur8 A667 22,2
Error in line 98: 8CKQGf S402 42,9
Error in line 109: En1aFsnEx S402 69,40
Error in line 104: En1aFsnEx S392 8,1
Error in line 91: SEHK4uS S402 97,4
Error in line 110: En1aFsnEx S402 258,1
Error in line 118: shgiOwihgkp S392 64,8
Error in line 105: xWkhzur8 S402 85,3
Error in line 125: xWkhzur8 S125 71,7
Error in line 120: shgiOwihgkp A667 29,9
Error in line 131: shgiOwihgkp S402 27,4
Error in line 132: A667 S402 144,8
Error in line 156: A667 A667 16,7
Error in line 140: SEHK4uS S125 18,0
Error in line 176: A667 S402 63,6
Error in line 186: 8CKQGf S402 7,2
Error in line 189: 8CKQGf S392 6,4
Error in line 202: A667 A667 -5,4
Error in line 199: xWkhzur8 A667 90,3
Error in line 207: shgiOwihgkp S4	2 1,1
Error in line 209: 8CKQGf Sj92 j6,5
Error in line 210: txekvZJk S125 58,0
Error in line 217: A667 A667 63,3
Error in line 216: SEHK4uS S392 89,8
Error in line 218: A667 S392 5,7
Error in line 212: 8CKQGf S392 10,6
Error in line 227: A667 S392 78,4
Error in line 204: shgiOwihgkp S402 35,0
Error in line 233: A667 A667 75,9
Error in line 215: txekvZJk A667 13,4
